syntax = "proto3";
option go_package = "/src/models/proto/;proto";
package models;

message Search {
  string Title = 1;
  string Year = 2;
  string ImdbID = 3;
  string Type = 4;
  string Poster = 5 ;
}

message MoviesSearchResponse {
  repeated Search list = 1;
  int64 TotalResults = 2;
  bool Response = 3;
}

message MetaMoviesSearchResult {
  int64 TotalResults = 2;
  bool Response = 3;
}

message MoviesSearchResult {
  repeated Search Data = 1;
  int64 Code = 2;
  string Message = 3;
  MetaMoviesSearchResult Meta = 4;
}

message Rating {
  string source = 1;
  string value = 2;
}

message MovieDetailResponse {
  string Title    = 1;
  string Year     = 2;
  string Rated    = 3;
  string Released = 4;
  string Runtime  = 5;
  string Genre    = 6;
  string Director = 7;
  string Writer   = 8;
  string Actors   = 9;
  string Plot     = 10;
  string Language = 11;
  string Country  = 12;
  string Awards   = 13;
  string Poster   = 14;
  string Metascore = 15;
  string ImdbRating = 16;
  string ImdbVotes = 17;
  string ImdbID = 18;
  string Type = 19;
  string DVD = 20;
  string BoxOffice = 21;
  string Production = 22;
  string Website = 23;
  bool Response = 24;
  repeated Rating Ratings = 25;
}

message MoviesSearchParams {
  string Search = 1;
  int32 Page = 2;
}

message MoviesGetDetailParams {
  string ID = 1;
}

message MovieDetailResult {
  MovieDetailResponse Data = 1;
  int64 Code = 2;
  string Message = 3;
  MetaMoviesSearchResult Meta = 4;
}


service Movies {
  rpc Search(MoviesSearchParams) returns (MoviesSearchResult) {}
  rpc GetDetail(MoviesGetDetailParams) returns (MovieDetailResult) {}
}